--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=PolicyD
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:j/d7CJQv4gR6IxDdnHvvQ7JWllu/dA5L/f5Qw8MLA50=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://127.0.0.1:8181
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
