--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=base64:j/d7CJQv4gR6IxDdnHvvQ7JWllu/dA5L/f5Qw8MLA50=
 APP_DEBUG=true
 #APP_URL=https://127.0.0.1:8181
-APP_URL=https://test-api2.gazi.edu.tr
+APP_URL=http://test-api2.gazi.edu.tr
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
