--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -3,6 +3,8 @@ kind: Ingress
 metadata:
   name: test-api2-server-http-ingress
   namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
 
 
 spec:
